# hormuz-crossing-tracker

./: .env.example  .gitignore  CONTRIBUTING.md  DATA_LICENSE.md  Dockerfile.worker  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  rebuild.yml
.husky/: pre-push
scripts/: export_snapshot.py  fetch_gfw.py  prepare_release.py  rebuild.sh  snapshot_ais.py
site/: build.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  style.css  tsconfig.json
site/data/: gfw_timeline.json  vessels.json  vessels_timeline.json
site/src/: app.ts
worker/: db.py  gfw_periodic_fetch.py  maritime_passages_live.py  persistent_workers.py
